--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ add_executable(testing
     gtest/gtest_main.cc)
 
 # add_executable(algo algo.cpp unique_ints.hpp)
-add_executable(structure structure.cpp unique_ints.hpp)
+add_executable(structure_testing structure_testing.cpp unique_ints.hpp)
 
 target_link_libraries(testing -lgmp -lgmpxx -lpthread)
