Adds HyperLogLog implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,12 @@ add_executable(testing
     gtest/gtest.h
     gtest/gtest_main.cc)
 
+add_library(murmurhash
+    murmurhash/murmurhash.h
+    murmurhash/murmurhash.cpp)
+
 # add_executable(algo algo.cpp unique_ints.hpp)
 add_executable(structure_testing structure_testing.cpp unique_ints.hpp)
 
 target_link_libraries(testing -lgmp -lgmpxx -lpthread)
+target_link_libraries(structure_testing murmurhash)
